mongo-express/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   # annotations:
#   #   cert-manager.io/cluster-issuer: issuer
#   labels:
#     # app.kubernetes.io/instance: mongo-express
#     # app.kubernetes.io/name: mongo-express
#     # argocd.argoproj.io/instance: mongo-express
#     app: mongo-express
#   name: minimal-ingress
#   # namespace: myapp
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: mongo-express
#       http:
#         paths:
#           - backend:
#               service:
#                 name: mongo-express-service
#                 port:
#                   number: 8081
#             path: /
#             pathType: ImplementationSpecific
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  labels:
    app: mongo-express
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
